# 20-C-Projects-SFML-

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/01 - Windows Basics/: Main.cpp
src/02 - Bouncing Ball/: BounceBall.cpp
src/03 - Paddle and Ball/: Main.cpp
src/04 -  Click the Shape/: Main.cpp
src/05 - Image Viewer/: Main.cpp
